--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^5.6.2"
+    "mongoose": "^5.6.2",
+    "mongoose-paginate": "^5.0.3"
   }
 }
