--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "express": "^4.17.1",
     "mongoose": "^5.6.2",
     "mongoose-paginate": "^5.0.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-twitter": "^1.0.4",
     "require-dir": "^1.2.0"
   }
 }
